<resources>
    <string name="app_name">MovieApp</string>
    <string name="title_main">Главное</string>
    <string name="title_search">Поиск</string>
    <string name="title_profile">Профиль</string>
    <string name="title_favourite">Избранное</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>


    <!-- fragment main -->
    <string name="adventure_movies">Приключенческие фильмы</string>
    <string name="criminals_movies">Криминальные фильмы</string>
    <string name="comedies_movies">Комедийные фильмы</string>
    <string name="shooters">Боевики</string>
    <string name="romantic_movies">Романтические фильмы</string>
    <string name="fantasy">Фэнтези</string>
    <string name="history">Исторические</string>
    <string name="wars">Военные фильмы</string>
    <string name="all">Все</string>
    <string name="top_250_movies">Фильмы из Топ-250 Кинопоиска</string>
    <string name="top_new_films">Топ новых фильмов</string>
    <string name="best_comedy">Лучшие комдии</string>
    <string name="back">Назад</string>
    <string name="storyline">Описание</string>
    <string name="actors">Актерский состав</string>
    <string name="same_movies">Похожие фильмы</string>
    <string name="best_films">Лучшие фильмы</string>
    <string name="may_be_it_interested">Возможно тебя заинтересует:</string>
    <string name="favourite">Избранное:</string>
    <string name="poster">poster</string>
    <string name="profile">Профиль</string>
    <string name="language">Язык</string>
    <string name="dark_mode">Тема</string>
    <string name="enter_email">Введите электронную почту</string>
    <string name="email">Email</string>
    <string name="next">Далее</string>
    <string name="signin">Войти</string>

    <string name="enter_name">Введите имя</string>
    <string name="enter_last_name">Введите фамилию</string>
    <string name="enter_age">Введите возраст</string>
    <string name="registrait">Зарегистрироваться</string>
    <string name="enter_password">Введите пароль</string>
    <string name="enter_in_account">Вход в аккаунт</string>
</resources>