<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_main" />

    <item
        android:id="@+id/navigation_search"
        android:icon="@drawable/ic_search"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:enabled="true"
        android:title="@string/title_search" />

    <item
        android:id="@+id/navigation_favourite"
        android:icon="@drawable/ic_favourite"
        android:orderInCategory="100"
        android:enabled="true"
        android:title="@string/title_favourite" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/ic_profile"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:title="@string/title_profile"/>


</menu>