<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_color"
    tools:context=".presentation.ui.movie.MovieFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="@dimen/spacing_4x">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_left_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/spacing_4x"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/root_right_guideline"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:orientation="vertical"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintGuide_end="@dimen/spacing_4x" />

        <ImageView
            android:id="@+id/movie_poster_image"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintDimensionRatio="3:2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="ContentDescription"
            tools:src="@drawable/example_poster" />

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@drawable/ic_mask"
            app:layout_constraintBottom_toBottomOf="@id/movie_poster_image"
            app:layout_constraintEnd_toEndOf="@id/movie_poster_image"
            app:layout_constraintStart_toStartOf="@id/movie_poster_image"
            app:layout_constraintTop_toTopOf="@id/movie_poster_image" />

        <LinearLayout
            android:id="@+id/back_button_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_13x"
            android:gravity="center_vertical|start"
            android:orientation="horizontal"
            android:paddingTop="@dimen/spacing_2x"
            android:paddingBottom="@dimen/spacing_2x"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/back_button_arrow_image"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:src="@drawable/ic_back"
                app:tint="@color/color_white"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/back_button_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/spacing_2x"
                android:gravity="center_vertical"
                android:text="@string/back"
                android:layout_weight="3"
                android:textColor="@color/color_white"
                android:textSize="@dimen/text_size_sub_title" />

            <ImageView
                android:id="@+id/image_like"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:src="@drawable/ic_favorite"
                android:layout_weight="1"/>

        </LinearLayout>

        <TextView
            android:id="@+id/movie_age_restrictions_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/spacing_3x"
            android:background="@drawable/ic_rectangle"
            android:backgroundTint="@color/background_color"
            android:gravity="center"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_body"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/movie_name_text"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            tools:text="13+" />

        <TextView
            android:id="@+id/movie_name_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_headline"
            android:textStyle="bold"
            android:layout_marginTop="254dp"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toTopOf="@id/movie_poster_image"
            tools:text="Avengers" />


        <TextView
            android:id="@+id/movie_genres_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1x"
            android:textColor="@color/pink_dark"
            android:textSize="@dimen/text_size_sub_title"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_name_text"
            tools:text="Action, Fiction" />


        <RatingBar
            android:id="@+id/rating_bar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            style="?android:attr/ratingBarStyleSmall"
            app:layout_constraintBottom_toBottomOf="@id/movie_reviews_count_text"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_genres_text"
            android:paddingTop="9dp"
            android:numStars="5"
            android:stepSize="0.1"
            android:rating="4"
            android:theme="@style/MyRatingBar"/>

        <TextView
            android:id="@+id/movie_reviews_count_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/spacing_2x"
            android:layout_marginTop="@dimen/spacing_1x"
            android:textAllCaps="true"
            android:textColor="@color/gray_dark"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/rating_bar"
            app:layout_constraintTop_toBottomOf="@id/movie_genres_text"
            tools:text="125 reviews" />

        <TextView
            android:id="@+id/movie_description_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6x"
            android:text="@string/storyline"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_reviews_count_text" />

        <TextView
            android:id="@+id/movie_storyline_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_1x"
            android:textColor="@color/color_white_transparent"
            android:textSize="@dimen/text_size_sub_title"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_description_text"
            tools:text="Some long description about Avengers movie" />

        <TextView
            android:id="@+id/movie_cast_title_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_6x"
            android:text="@string/actors"
            android:textColor="@color/color_white"
            android:textSize="@dimen/text_size_sub_title"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_storyline_text" />


        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rw_actors"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"
            app:layout_constraintStart_toEndOf="@id/root_left_guideline"
            app:layout_constraintTop_toBottomOf="@id/movie_cast_title_text"
            tools:listitem="@layout/view_holder_actor" />

<!--        <TextView-->
<!--            android:id="@+id/text_same_movies"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/spacing_6x"-->
<!--            android:text="@string/same_movies"-->
<!--            android:textColor="@color/color_white"-->
<!--            android:textSize="@dimen/text_size_sub_title"-->
<!--            android:textStyle="bold"-->
<!--            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"-->
<!--            app:layout_constraintStart_toEndOf="@id/root_left_guideline"-->
<!--            app:layout_constraintTop_toBottomOf="@id/movie_cast_title_text" />-->

<!--        <androidx.recyclerview.widget.RecyclerView-->
<!--            android:id="@+id/recycler_movies"-->
<!--            android:layout_width="0dp"-->
<!--            android:layout_height="250dp"-->
<!--            android:nestedScrollingEnabled="false"-->
<!--            android:orientation="horizontal"-->
<!--            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"-->
<!--            app:layout_constraintEnd_toStartOf="@id/root_right_guideline"-->
<!--            app:layout_constraintStart_toEndOf="@id/root_left_guideline"-->
<!--            app:layout_constraintTop_toBottomOf="@id/text_same_movies"-->
<!--            tools:listitem="@layout/view_holder_movie" />-->


    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>